--- a/css/styles.css
+++ b/css/styles.css
@@ -36,6 +36,32 @@ hr {
   margin: 5px;
 }
 
+li {
+  display: block;
+  font-size: 24px;
+  padding: 10px;
+}
+
+button {
+  margin: 10px;
+  background-color: rgba(255, 255, 255, 0);
+  width: 180px;
+  height: 50px;
+  border-radius: 50px;
+  border: solid 2px #8a39db;
+  color: #8a39db;
+}
+button:hover {
+  background: linear-gradient(
+    94.5deg,
+    #8a39db -44.44%,
+    rgba(146, 81, 211, 0.29) 124.3%
+  );
+  color: #fff;
+}
+
+a{text-decoration: none;}
+
 /* Header */
 header {
   height: 60px;
@@ -53,7 +79,8 @@ header {
   height: 60px;
   width: 100%;
 }
-.fa-bars {
+.fa-bars,
+.fa-times {
   font-size: 30px;
 }
 
@@ -92,7 +119,8 @@ header {
   width: 400px;
   height: 400px;
   margin: auto;
-  border-radius: 10px;}
+  border-radius: 10px;
+}
 
 /* Part 02 - Projects*/
 
@@ -179,3 +207,22 @@ footer {
 #Powered {
   width: 110px;
 }
+
+/* Menu */
+
+#bkg-menu {
+  background-color: #25242d;
+  position: fixed;
+  width: 100%;
+  height: 100%;
+  top: 60px;
+}
+
+.hide {
+  display: none;
+}
+
+#menu {
+  text-align: center;
+}
+
