--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -1,10 +1,12 @@
 @import url("https://fonts.googleapis.com/css2?family=Poppins:wght@100;400;600;800;900&display=swap");
 
+@import 'variables';
+
 /* General */
 
 body {
   margin: 0px;
-  background-color: #1d1d1d;
+  background-color: $neutralColor;
 }
 
 * {
@@ -32,7 +34,7 @@ h3 {
 hr {
   width: 150px;
   display: inline-block;
-  border: 1px solid #8a39db;
+  border: 1px solid $primaryColor;
   margin: 5px;
 }
 
@@ -48,13 +50,13 @@ button {
   width: 180px;
   height: 50px;
   border-radius: 50px;
-  border: solid 2px #8a39db;
-  color: #8a39db;
+  border: solid 2px $primaryColor;
+  color: $primaryColor;
 }
 button:hover {
   background: linear-gradient(
     94.5deg,
-    #8a39db -44.44%,
+    $primaryColor -44.44%,
     rgba(146, 81, 211, 0.29) 124.3%
   );
   color: #fff;
@@ -72,16 +74,14 @@ a {
 
 
 header {
+    @include displayFlex(space-between, center, none, none);
   height: 60px;
   width: 100%;
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
   position: fixed;
 }
 #bkgHeader {
   position: fixed;
-  box-shadow: 0 0px 5px #8a39db;
+  box-shadow: 0 0px 5px $primaryColor;
   backdrop-filter: blur(15px);
   -webkit-backdrop-filter: blur(15px);
   height: 60px;
@@ -107,7 +107,7 @@ header {
 }
 
 .ftPurple {
-  color: #8a39db;
+  color: $primaryColor;
 }
 
 .fa-github,
@@ -139,29 +139,26 @@ header {
   padding: 300px 0px 0px 0px;
 }
 #sec02 {
-  display: flex;
-  justify-content: space-between;
+   @include displayFlex(space-between, none, none, wrap);
   padding: 70px 0px 0px 0px;
-  flex-flow: wrap;
 }
 .fa-font-awesome-flag,
 .fa-folder,
 .fa-gem {
   font-size: 40px;
-  color: #8a39db;
+  color: $primaryColor;
 }
 .projects {
   width: 450px;
   height: 300px;
-  background-color: #25242d;
+  background-color: $secondaryColor;
   border-radius: 10px;
   margin: 15px;
-  box-shadow: #25242d ;
+  box-shadow: $secondaryColor ;
 }
 #pIcons {
+  @include displayFlex(space-between, none, none, none);
   padding: 25px;
-  display: flex;
-  justify-content: space-between;
 }
 #txtProject {
   margin: 0px 0px 0px 25px;
@@ -169,46 +166,41 @@ header {
 
 .projects:hover {
   border: solid 1px;
-  border-image: linear-gradient(-210deg, #8a39db, rgba(0, 0, 0, 0) 80%) 1.2;
+  border-image: linear-gradient(-210deg, $primaryColor, rgba(0, 0, 0, 0) 80%) 1.2;
   margin: 10px;
 }
 
 /* Part 03 - Skills */
 
 #sec03 {
-  display: flex;
-  justify-content: space-between;
+  @include displayFlex(space-between, none, none, wrap );
   padding: 70px 0px 0px 0px;
-  flex-flow: wrap;
 }
 .t02 {
   padding: 150px 0px 0px 0px;
 }
 .skillBlock {
+  @include displayFlex(center, none, center, none ); 
   width: 200px;
   height: 150px;
-  background-color: #25242d;
+  background-color: $secondaryColor;
   border-radius: 10px;
-  display: flex;
-  align-content: center;
-  justify-content: center;
   margin: 10px 10px 25px 10px;
 }
 
 .skillBlock:hover {
   border: solid 1px;
-  border-image: linear-gradient(-210deg, #8a39db, rgba(0, 0, 0, 0) 80%) 1.2;
+  border-image: linear-gradient(-210deg, $primaryColor, rgba(0, 0, 0, 0) 80%) 1.2;
   margin: 10px 10px 20px 10px;
 }
 
 /* Footer */
 
 footer {
+  @include displayFlex(space-between, none, none, none);
   border-top: solid 1px #babaca;
   height: 60px;
-  display: flex;
   width: 90%;
-  justify-content: space-between;
   padding: 0px 30px 0px 30px;
   margin: auto;
 }
@@ -222,10 +214,10 @@ footer {
 /* Menu */
 
 #bkg-menu {
-  background-color: #25242d;
+  background-color: $secondaryColor;
   position: fixed;
   width: 100%;
-  height: 100%;
+  height: 100vh;
   top: 60px;
 }
 
