--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -225,3 +225,62 @@ footer {
   text-align: center;
   padding: 0px;
 }
+
+/* Mediaqueries */
+
+@media (max-width: 960px) {
+  section {
+    width: 600px;
+  }
+  #imgSec {
+    display: block;
+  }
+  #imgPrimary {
+    display: none;
+  }
+  .title {
+    padding: 150px 0px 0px 0px;
+  }
+  #sec02,
+  #sec03 {
+    justify-content: center;
+    height: 100%;
+  }
+  .projects:hover {
+    margin: 10px;
+  }
+}
+
+@media (max-width: 450px) {
+  section {
+    width: 300px;
+  }
+  #imgSec {
+    display: block;
+    width: 200px;
+    height: 200px;
+  }
+  #imgPrimary {
+    display: none;
+  }
+  .title {
+    padding: 50px 0px 0px 0px;
+  }
+  #sec02,
+  #sec03 {
+    justify-content: center;
+    height: 100%;
+  }
+  #sec01 {
+    padding: 100px 0px 30px 0px;
+  }
+  .projects:hover {
+    margin: 10px;
+  }
+  footer {
+    width: 78%;
+    flex-direction: column;
+    align-items: center;
+    text-align: center;
+  }
+}
